Separated poster & thermometer

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html {
 }
 h1 {
   margin-bottom: 50px;
-  font-family: 'Carter One', sans-serif;
+  font-family: 'Helvetica', sans-serif;
   color: #485C82;
 }
 h2 {
@@ -17,12 +17,9 @@ h2 {
 }
 #thermometer-wrap {
   width: 276px;
-  border-radius: 10px;
-  background: #f1b809 url(../img/niko.png) no-repeat;
-  padding: 0.5px 40px 20px 62px;
 }
 #thermometer .current {
-  color: #ffffff;
+  color: #a5004c;
 }
 #thermometer .goal {
   color: #003300;
