--- a/css/style.less
+++ b/css/style.less
@@ -1,30 +1,29 @@
-
 body, html {
-	padding: 0;
-	font-family: sans-serif;
-	background: #FDF9E0;
-	width: 100%;
-	height: 100%;
+    padding: 0;
+    font-family: sans-serif;
+    background: #FDF9E0;
+    width: 100%;
+    height: 100%;
 }
 h1 {
-	margin-bottom: 50px;
-	font-family: 'Carter One', sans-serif;
-	color: #485C82;
+    margin-bottom: 50px;
+    font-family: 'Helvetica', sans-serif;
+    color: #485C82;
 }
 h2 {
-	line-height: 120%;
-	font-family: 'Satisfy', cursive;
+    line-height: 120%;
+    font-family: 'Satisfy', cursive;
 }
 
 #thermometer-wrap {
-	width: 276px;
-	border-radius: 10px;
-	background: #f1b809 url(../img/niko.png) no-repeat; //-22px -40px;
-	padding: 0.5px 40px 20px 62px;
+    width: 276px;
+    //border-radius: 10px;
+    //background: #f1b809 no-repeat; //-22px -40px;
+    //padding: 0.5px 40px 20px 62px;
 }
 
 #thermometer .current {
-    color: #ffffff;
+    color: #a5004c
 }
 #thermometer .goal {
     color: #003300;
@@ -36,38 +35,38 @@ h2 {
 //     color: #ff0000;//#22235C; //#FFDD9B;
 // }
 #explain {
-	background: #406886 url("../img/playground.png") no-repeat scroll 98% bottom / 150px auto;
-	border-radius: 10px;
-	color: #fff;
-	padding: 20px 60px 105px 20px;
-	min-height: 160px;
-	margin: 30px 0;
+    background: #406886 url("../img/playground.png") no-repeat scroll 98% bottom / 150px auto;
+    border-radius: 10px;
+    color: #fff;
+    padding: 20px 60px 105px 20px;
+    min-height: 160px;
+    margin: 30px 0;
 
-	> p {
-		line-height: 150%;
+    > p {
+	line-height: 150%;
+    }
+    > p.extra-padding {
+	padding-right: 160px;
+    }
+    h2 {
+	margin: 0 0 10px;
+    }
+    a {
+	color: #ffffff;
+	transition: 0.3s all;
+	border-bottom: solid 1px #ffffff;
+	text-decoration: none;
+	&:hover {
+	    border-color: transparent;
+	    text-decoration: none;
 	}
-	> p.extra-padding {
-		padding-right: 160px;
-	}
-	h2 {
-		margin: 0 0 10px;
-	}
-	a {
-		color: #ffffff;
-		transition: 0.3s all;
-		border-bottom: solid 1px #ffffff;
-		text-decoration: none;
-		&:hover {
-			border-color: transparent;
-			text-decoration: none;
-		}
-	}
+    }
 }
 .therm-text ul {
-	margin-left: 0;
-	padding-left: 0;
+    margin-left: 0;
+    padding-left: 0;
 }
 .therm-text ul li {
-	margin-left: 1em;
+    margin-left: 1em;
 }
 
